@@ -2,6 +2,8 @@ Version - 2.6 - 09-21-15
 -Fixed an issued with fossilRecord2fossilRanges where a dataset with a single taxon resulted in a fatal error regarding an attempt to replace more elements than already exists
 -Fixed issue with merging cryptic taxa in fossilRecord2fossilRanges
 -Discovered slight stochastic element in minBranchLength where order of edges mattered, and I apparently used sample() to choose the next edge, which means I was an idiot in 2011. Thanks to Manabu Sakamoto for reporting this very difficult to notice bug.
+-Made several improvements to timeSliceTree thanks to modified code from Klaus Schliep, particularly replacing use of dist.nodes for root-to-tip distances with node.depth.edgelength instead (much more efficient, much faster!)
+	-Made similar changes to all functions in modifyTerminalBranches based on this suggestions, including dropExtinct
 
 Version - 2.5 - 09-20-15
 -Added argument APIversion to makePBDBtaxonTree which allows a user to control which version of the API is called when argument solveMissing=queryPBDB. Current default is "1.1", this will need to be updated when PBDB API 1.2 becomes public
